Actualizar lógica de actualización de platos, permitir carga de imágenes y mejorar estilos en formularios de inicio de sesión y datos personales

--- a/static/css/platos.css
+++ b/static/css/platos.css
@@ -75,6 +75,7 @@ small {
   height: 15rem;
   overflow-y: auto;
   overflow-x: hidden;
+  width: 18vw;
 }
 .multiselect-dropdown-list::-webkit-scrollbar {
   width: 6px;
