--- a/templates/SeguimientoNutricional.html
+++ b/templates/SeguimientoNutricional.html
@@ -24,7 +24,7 @@
   align-items: center;
   width: 90%;
   max-width: 1000px;
-  background: #13f487;
+  background: #10b981;
   border-radius: 10px;
   padding: 1.5rem;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
