--- a/templates/CalendarioDieta.html
+++ b/templates/CalendarioDieta.html
@@ -5,19 +5,21 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <link href="{{ url_for('static', filename='css/calendarioDieta.css') }}" rel="stylesheet" />
 <div class="content">
-    <div class="centrarContenido">
+    <div class="centrarContenido aaa">
         <div>
-            <a href="{{ url_for('calendario_dieta', dia='Lunes') }}">Lunes</a>
-            <a href="{{ url_for('calendario_dieta', dia='Martes') }}">Martes</a>
-            <a href="{{ url_for('calendario_dieta', dia='Miercoles') }}">Miercoles</a>
-            <a href="{{ url_for('calendario_dieta', dia='Jueves') }}">Jueves</a>
-            <a href="{{ url_for('calendario_dieta', dia='Viernes') }}">Viernes</a>
-            <a href="{{ url_for('calendario_dieta', dia='Sabado') }}">Sabado</a>
-            <a href="{{ url_for('calendario_dieta', dia='Domingo') }}">Domingo</a>
+            <div id="barraDias">
+                <a class="btn btn-primary" href="{{ url_for('calendario_dieta', dia='Lunes') }}">Lunes</a>
+                <a class="btn btn-primary" href="{{ url_for('calendario_dieta', dia='Martes') }}">Martes</a>
+                <a class="btn btn-primary" href="{{ url_for('calendario_dieta', dia='Miercoles') }}">Miercoles</a>
+                <a class="btn btn-primary" href="{{ url_for('calendario_dieta', dia='Jueves') }}">Jueves</a>
+                <a class="btn btn-primary" href="{{ url_for('calendario_dieta', dia='Viernes') }}">Viernes</a>
+                <a class="btn btn-primary" href="{{ url_for('calendario_dieta', dia='Sabado') }}">Sabado</a>
+                <a class="btn btn-primary" href="{{ url_for('calendario_dieta', dia='Domingo') }}">Domingo</a>
+            </div>
 
             {{html|safe}}
-
         </div>
+
         <div>
         </div>
     </div>
